// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacilitiesListContainer should match the previous snapshot 1`] = `
<Fragment>
  <SearchTableLayoutComponent
    body={
      <tbody>
        <Relay(FacilitiesRowItemComponent)
          facilitySearchResult={
            Object {
              " $fragmentRefs ": Object {
                "FacilitiesRowItemContainer_facilitySearchResult": true,
              },
              "rowId": 1,
              "totalFacilityCount": 1,
            }
          }
          query={
            Object {
              " $fragmentRefs": Object {
                "FacilitiesRowItemContainer_query": true,
              },
              " $refType": "FacilitiesListContainer_query",
              "allFacilities": Object {
                "totalCount": 20,
              },
              "organisation": Object {
                "id": "abc",
                "rowId": 1,
              },
              "searchAllFacilities": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs ": Object {
                        "FacilitiesRowItemContainer_facilitySearchResult": true,
                      },
                      "rowId": 1,
                      "totalFacilityCount": 1,
                    },
                  },
                ],
              },
            }
          }
        />
      </tbody>
    }
    displayNameToColumnNameMap={
      Object {
        "BC GHG id": "facility_bcghgid",
        "Facility Name": "facility_name",
        "Facility Type": "facility_type",
        "Organisation Name": "organisation_name",
        "Reporting period of last SWRS report": "last_swrs_reporting_year",
        "Status": "application_revision_status",
      }
    }
    handleEvent={[MockFunction]}
  />
</Fragment>
`;

exports[`FacilitiesListContainer should not render the Pagination component if < 10 facilities (totalFacilityCount < 10) 1`] = `
<Fragment>
  <SearchTableLayoutComponent
    body={
      <tbody>
        <Relay(FacilitiesRowItemComponent)
          facilitySearchResult={
            Object {
              " $fragmentRefs ": Object {
                "FacilitiesRowItemContainer_facilitySearchResult": true,
              },
              "rowId": 1,
              "totalFacilityCount": 5,
            }
          }
          query={
            Object {
              " $fragmentRefs": Object {
                "FacilitiesRowItemContainer_query": true,
              },
              " $refType": "FacilitiesListContainer_query",
              "allFacilities": Object {
                "totalCount": 20,
              },
              "organisation": Object {
                "id": "abc",
                "rowId": 1,
              },
              "searchAllFacilities": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs ": Object {
                        "FacilitiesRowItemContainer_facilitySearchResult": true,
                      },
                      "rowId": 1,
                      "totalFacilityCount": 5,
                    },
                  },
                ],
              },
            }
          }
        />
      </tbody>
    }
    displayNameToColumnNameMap={
      Object {
        "BC GHG id": "facility_bcghgid",
        "Facility Name": "facility_name",
        "Facility Type": "facility_type",
        "Organisation Name": "organisation_name",
        "Reporting period of last SWRS report": "last_swrs_reporting_year",
        "Status": "application_revision_status",
      }
    }
    handleEvent={[MockFunction]}
  />
</Fragment>
`;

exports[`FacilitiesListContainer should render a maximum of 9 pagination pages if there are > 9 possible pages ( totalFacilityCount > 90) 1`] = `
<Fragment>
  <SearchTableLayoutComponent
    body={
      <tbody>
        <Relay(FacilitiesRowItemComponent)
          facilitySearchResult={
            Object {
              " $fragmentRefs ": Object {
                "FacilitiesRowItemContainer_facilitySearchResult": true,
              },
              "rowId": 1,
              "totalFacilityCount": 200,
            }
          }
          query={
            Object {
              " $fragmentRefs": Object {
                "FacilitiesRowItemContainer_query": true,
              },
              " $refType": "FacilitiesListContainer_query",
              "allFacilities": Object {
                "totalCount": 20,
              },
              "organisation": Object {
                "id": "abc",
                "rowId": 1,
              },
              "searchAllFacilities": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs ": Object {
                        "FacilitiesRowItemContainer_facilitySearchResult": true,
                      },
                      "rowId": 1,
                      "totalFacilityCount": 200,
                    },
                  },
                ],
              },
            }
          }
        />
      </tbody>
    }
    displayNameToColumnNameMap={
      Object {
        "BC GHG id": "facility_bcghgid",
        "Facility Name": "facility_name",
        "Facility Type": "facility_type",
        "Organisation Name": "organisation_name",
        "Reporting period of last SWRS report": "last_swrs_reporting_year",
        "Status": "application_revision_status",
      }
    }
    handleEvent={[MockFunction]}
  />
  <ForwardRef>
    <First
      onClick={[Function]}
    />
    <Prev
      onClick={[Function]}
    />
    <ForwardRef>
      <PageItem
        active={true}
        activeLabel="(current)"
        disabled={false}
        key="1"
        onClick={[Function]}
      >
        1
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="2"
        onClick={[Function]}
      >
        2
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="3"
        onClick={[Function]}
      >
        3
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="4"
        onClick={[Function]}
      >
        4
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="5"
        onClick={[Function]}
      >
        5
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="6"
        onClick={[Function]}
      >
        6
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="7"
        onClick={[Function]}
      >
        7
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="8"
        onClick={[Function]}
      >
        8
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="9"
        onClick={[Function]}
      >
        9
      </PageItem>
    </ForwardRef>
    <Ellipsis />
    <Next
      onClick={[Function]}
    />
    <Last
      onClick={[Function]}
    />
  </ForwardRef>
</Fragment>
`;

exports[`FacilitiesListContainer should render the Pagination component if > 10 facilities (totalFacilityCount > 10) 1`] = `
<Fragment>
  <SearchTableLayoutComponent
    body={
      <tbody>
        <Relay(FacilitiesRowItemComponent)
          facilitySearchResult={
            Object {
              " $fragmentRefs ": Object {
                "FacilitiesRowItemContainer_facilitySearchResult": true,
              },
              "rowId": 1,
              "totalFacilityCount": 25,
            }
          }
          query={
            Object {
              " $fragmentRefs": Object {
                "FacilitiesRowItemContainer_query": true,
              },
              " $refType": "FacilitiesListContainer_query",
              "allFacilities": Object {
                "totalCount": 20,
              },
              "organisation": Object {
                "id": "abc",
                "rowId": 1,
              },
              "searchAllFacilities": Object {
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs ": Object {
                        "FacilitiesRowItemContainer_facilitySearchResult": true,
                      },
                      "rowId": 1,
                      "totalFacilityCount": 25,
                    },
                  },
                ],
              },
            }
          }
        />
      </tbody>
    }
    displayNameToColumnNameMap={
      Object {
        "BC GHG id": "facility_bcghgid",
        "Facility Name": "facility_name",
        "Facility Type": "facility_type",
        "Organisation Name": "organisation_name",
        "Reporting period of last SWRS report": "last_swrs_reporting_year",
        "Status": "application_revision_status",
      }
    }
    handleEvent={[MockFunction]}
  />
  <ForwardRef>
    <First
      onClick={[Function]}
    />
    <Prev
      onClick={[Function]}
    />
    <ForwardRef>
      <PageItem
        active={true}
        activeLabel="(current)"
        disabled={false}
        key="1"
        onClick={[Function]}
      >
        1
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="2"
        onClick={[Function]}
      >
        2
      </PageItem>
      <PageItem
        active={false}
        activeLabel="(current)"
        disabled={false}
        key="3"
        onClick={[Function]}
      >
        3
      </PageItem>
    </ForwardRef>
    <Next
      onClick={[Function]}
    />
    <Last
      onClick={[Function]}
    />
  </ForwardRef>
</Fragment>
`;
